# rofi-widgets

./: flake.nix  hie.yaml  rofi-widgets.cabal  widgets.cabal
app/: Main.hs  MyWidgets.hs
config/: Config.hs
launcher/: Main.hs  Theme.hs
powermenu/: Main.hs  Theme.hs
run/: Main.hs  Theme.hs
src/: ColorScheme.hs  Element.hs  Property.hs  Rofi.hs  Widget.hs
src/Element/: Entry.hs  Inputbar.hs  Listview.hs  Mainbox.hs  Prompt.hs  Window.hs
topbar/: Debounce.hs  Main.hs  topbar.css
topbar/UI/: Clock.hs  Powermenu.hs  Spotify.hs  Strut.hs  System.hs  Volume.hs  Workspaces.hs
