cabal-version:      2.4
name:               rofi-widgets
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dmytro Pochapskyi
maintainer:         pchpsky@outlook.com

extra-source-files: CHANGELOG.md

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-missed-extra-shared-lib

common common-extensions
  default-extensions:
    OverloadedStrings
    RecordWildCards
    NamedFieldPuns
    GeneralizedNewtypeDeriving

common common-relude
  build-depends:
    relude ^>= 1.1.0.0

  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

executable rofi-widgets
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    MyWidgets

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base >=4.14
    , rofi-widgets
    , shelly

  hs-source-dirs: app

  default-language: Haskell2010

  default-extensions:
    OverloadedStrings

library
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  exposed-modules:
    Widget
    Element
    Element.Window
    Element.Mainbox
    Element.Inputbar
    Element.Prompt
    Element.Entry
    Element.Listview
    Property

  build-depends:
    , base >=4.14

  hs-source-dirs: src

  default-language: Haskell2010
