cabal-version:      2.4
name:               widgets
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dmytro Pochapskyi
maintainer:         pchpsky@outlook.com

extra-source-files: CHANGELOG.md

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-missed-extra-shared-lib -Wno-missing-signatures

common common-extensions
  default-extensions:
    OverloadedStrings
    RecordWildCards
    NamedFieldPuns
    GeneralizedNewtypeDeriving

common common-relude
  build-depends:
    relude ^>= 1.0.0.0

  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

executable powermenu
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  main-is: Main.hs

  other-modules:
    Theme

  build-depends:
    , base >=4.14
    , widgets
    , config
    , shelly

  hs-source-dirs: powermenu

  default-language: Haskell2010

  default-extensions:
    OverloadedStrings

executable launcher
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  main-is: Main.hs

  other-modules:
    Theme

  build-depends:
    , base >=4.14
    , widgets
    , config
    , shelly

  hs-source-dirs: launcher

  default-language: Haskell2010

  default-extensions:
    OverloadedStrings

executable run
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  main-is: Main.hs

  other-modules:
    Theme

  build-depends:
    , base >=4.14
    , widgets
    , config
    , shelly

  hs-source-dirs: run

  default-language: Haskell2010

  default-extensions:
    OverloadedStrings

executable topbar
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  ghc-options:
    -threaded

  main-is: Main.hs

  other-modules:
    Debounce
    UI.Strut
    UI.Workspaces
    UI.Spotify
    UI.Powermenu
    UI.Clock
    UI.System
    UI.Volume

  build-depends:
    , base >=4.14
    , widgets
    , config
    , shelly
    , gi-gtk ^>= 4.0.5
    , gi-gdk
    , gi-gio
    , gi-gdkx11
    , X11
    , haskell-gi-base
    , fsnotify
    , turtle
    , foldl

  hs-source-dirs: topbar

  default-language: Haskell2010

  default-extensions:
    OverloadedStrings
    OverloadedLabels

library
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  exposed-modules:
    ColorScheme
    Widget
    Element
    Element.Window
    Element.Mainbox
    Element.Inputbar
    Element.Prompt
    Element.Entry
    Element.Listview
    Property
    Rofi

  build-depends:
    , base >=4.14
    , first-class-families

  hs-source-dirs: src

  default-language: Haskell2010

library config
  import: common-ghc-options
  import: common-extensions
  import: common-relude

  exposed-modules:
    Config

  build-depends:
    , base >=4.14
    , widgets

  hs-source-dirs: config

  default-language: Haskell2010
